# ai-supported-desktop-sw

./: .gitignore  CLAUDE.md  ReadMe.md  VCPKG_STRATEGY.md
.claude/: CHANGELOG.md  session-state.json  settings.json  settings.local.json  workflow.json
.claude/agents/: architect.md  code-editor.md  code-reviewer.md  code-writer.md  cpp-builder.md  designer.md  devops.md  task-manager.md  tester.md
.claude/commands/: code-review.md  fix-issue.md
.claude/commands/session/: new.md  save.md  status.md
.claude/orchestrator/: __init__.py  main.py  parallel_runner.py  protocol.py  runner.py  state.py  ui.py  worktree_manager.py
.claude/orchestrator/tests/: __init__.py  test_openspec_init.py  test_parallel.py  test_session.py  test_triggers.py
.claude/skills/cpp-qml-rule/: SKILL.md
.claude/skills/mordern-cmake/: SKILL.md
.claude/skills/openspec-init/: SKILL.md
.claude/skills/openspec-workflow/: SKILL.md
.claude/skills/project-scaffolding/: SKILL.md
.claude/skills/session-protocol/: SKILL.md
.claude/skills/vcpkg-manager/: SKILL.md
.claude/templates/: project-structure.md
.github/workflows/: build-macos.yml  build-windows.yml  ci-lint.yml
build-scripts/: setup-dev.bat  setup-dev.sh
docs/: BRANCHING.md  BUILD.md  DEVELOPMENT.md
openspec/: AGENTS.md  project.md
openspec/changes/add-toss-pos-app/: design.md  proposal.md  tasks.md
openspec/changes/establish-orchestration-standards/: design.md  proposal.md  status.md  tasks.md
openspec/changes/setup-cross-platform-build/: design.md  proposal.md  tasks-updated.md  tasks.md
openspec/specs/orchestration/: spec.md
openspec/specs/parallel-agents/: spec.md
openspec/specs/project-scaffolding/: spec.md
openspec/specs/session-management/: spec.md
openspec/specs/toss-pos/: spec.md
toss-pos/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
toss-pos/qml/: Main.qml
toss-pos/qml/components/: CategoryBar.qml  OrderItemRow.qml  OrderPanel.qml  ProductCard.qml  TossButton.qml  TossCard.qml
toss-pos/qml/pages/: OrderPage.qml  PaymentPage.qml  ReportPage.qml
toss-pos/qml/theme/: TossTheme.qml
toss-pos/resources/: sample_data.sql
toss-pos/src/database/: db_manager.cpp  db_manager.h
toss-pos/src/models/: category_model.cpp  category_model.h  order_model.cpp  order_model.h  product_model.cpp  product_model.h
toss-pos/src/services/: order_service.cpp  order_service.h  report_service.cpp  report_service.h
toss-pos/src/types/: order.h  product.h
ttt/: CLAUDE.md
ttt/.claude/: settings.json  workflow.json
ttt/.claude/agents/: code-editor.md  code-reviewer.md  code-writer.md  devops.md  task-manager.md
ttt/.claude/commands/: workflow.md
ttt/.claude/orchestrator/: main.py  (+2 more)
(+24 files in other folders)
